--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   shared_preferences: ^0.5.7+3
   fluttertoast: ^4.0.0
   http: ^0.12.1
+  flutter_local_notifications:
+  flutter_datetime_picker: ^1.3.8
+  date_format: ^1.0.8
   
   
 
